@@ -37,6 +37,6 @@
 #ifndef _SUDO_VERSION_H
 #define _SUDO_VERSION_H
 
-static const char version[] = "1.6.7p2";
+static const char version[] = "1.6.7p3";
 
 #endif /* _SUDO_VERSION_H */
